ICE-9482 added different shades for overlapping events; added predefined style classes with different colours to use as custom style classes for events, including shades for overlapping events; fix for FF to previous commit regarding day square heights in month view
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@50922 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
@@ -51,6 +51,11 @@
 	position: relative;
 	overflow: auto;
 }
+@-moz-document url-prefix() {
+	.ice-ace-schedule .schedule-grid .schedule-days {
+		height: auto;
+	}
+}
 .ice-ace-schedule .schedule-view-month .schedule-grid .schedule-dow .schedule-dow-header {
 	width: 14.2857%;
 	padding: 14px 0;
